testdata/result/expr/!bad_lex_first_token_expr.sql.txt
--- !bad_lex_first_token_expr.sql
'hello
--- Error
syntax error: testdata/input/expr/!bad_lex_first_token_expr.sql:1:1: unclosed string literal
  1|  'hello
   |  ^~~~~~


--- AST
&ast.BadExpr{
  BadNode: &ast.BadNode{
    NodeEnd: 6,
    Tokens:  []*token.Token{
      &token.Token{
        Kind: "<bad>",
        Raw:  "'hello",
        End:  6,
      },
    },
  },
}

--- SQL
'hello
